# embedder

./: .gitignore  .mcp.json  CLAUDE.md  app.py  cli.py  config.py  docker-compose.yml  embedding.py  ingestion.py  init.sql  knowledgebase.py  mcp_tools.py  models.py  object_store.py  pipeline.yaml.example  pyproject.toml  requirements.txt  server.py  state.py  store.py
agents/: base.py  budget.py  factory.py  openai_agent.py  orchestrator.py  prompts.py  tasks.py  transformers_agent.py
bootstrap/: pipeline.py
config/: loader.py  models.py
data/qdrant/: meta.json
domain/: document.py  enums.py  knowledge.py
embedding/: base.py  factory.py  openai_embedder.py  sentence_transformers.py
ingest/: chunker.py  pipeline.py  preprocessor.py
pipeline/: chunker.py  embedder.py  git_loader.py  metadata.py  preprocessor.py  reranker.py  retriever.py
search/: reranker.py  retriever.py
sources/: __init__.py  base.py  factory.py  git.py
stores/: base.py  factory.py  faiss.py  faiss_store.py  qdrant.py  qdrant_store.py
tests/: conftest.py  test_knowledgebase.py  test_service.py
