[project]
name = "git-rag"
version = "0.1.0"
description = "Turn Git repositories into queryable knowledge bases using RAG"
readme = "CLAUDE.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "gitpython>=3.1.40",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.9.0",
    "tiktoken>=0.5.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
local-llm = ["transformers>=4.35.0", "torch>=2.0.0", "accelerate>=0.25.0"]
pdf = ["pdfplumber>=0.10.0"]
html = ["beautifulsoup4>=4.12.0"]
docx = ["python-docx>=1.0.0"]

[project.scripts]
git-rag = "cli:cli"
