[project]
name = "vectordb-mcp"
version = "0.3.0"
description = "MCP server providing semantic knowledge storage and search"
readme = "CLAUDE.md"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.2.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "anyio>=4.0.0",
    "mcp[cli]>=1.2.0",
    "tiktoken>=0.7.0",
]
